# vita-manicure

./: .env-template  .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
apps/bot/: __init__.py
apps/bot/handlers/: __init__.py  private.py
apps/bot/management/commands/: startbot.py
apps/main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/main/admin/: __init__.py  client.py  review.py  window.py  works.py
apps/main/admin/utils/: parser.py
apps/main/migrations/: 0001_initial.py  0002_client_window_client.py  0002_pricelist_works.py  0002_review.py  0003_delete_pricelist.py  0003_remove_window_approved.py  0004_client_blocked.py  0004_remove_works_name.py
apps/main/models/: __init__.py  client.py  review.py  window.py  works.py
apps/main/static/css/: custom.css
apps/main/templates/admin/: base_site.html  index.html
apps/main/templates/admin/review/: change_list.html
apps/main/templates/admin/window/: change_list.html  load_shedule.html
apps/main/templates/main/: base.html  index.html  success.html
apps/main/templates/main/includes/: footer.html  header.html
apps/main/templates/main/includes/index/: about.html  form.html  main.html  reviews.html  works.html
apps/main/templatetags/: custom_tags.py
apps/proxy/: admin.py  models.py
apps/proxy/migrations/: 0001_initial.py  0002_alter_proxy_url.py
config/: settings.py  urls.py
