[tool.poetry]
name = "manicure"
version = "0.1.0"
description = ""
authors = ["Lewbertsklol <lewbertsklol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-htmx = "^1.18.0"
django-livereload-server = "^0.5.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
tzdata = "^2024.1"
whitenoise = "^6.7.0"
django-admin-rangefilter = "^0.13.0"
django-forms-dynamic = "^1.0.0"
django-widget-tweaks = "^1.5.0"
pytelegrambotapi = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
