[tool.poetry]
name = "manicure"
version = "0.1.0"
description = ""
authors = ["Lewbertsklol <lewbertsklol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-htmx = "^1.18.0"
requests = "^2.32.3"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
django-admin-rangefilter = "^0.13.0"
django-widget-tweaks = "^1.5.0"
pytelegrambotapi = "^4.20.0"
django-pwa = "^1.1.0"


[tool.poetry.group.dev.dependencies]
django-livereload-server = "^0.5.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
